generate body texture
