# backend/api_swagger.yml
@@ -11,11 +11,14 @@ security:
   - ApiKeyAuth: []
 tags:
   - name: bodies
+  - name: texture
 paths:
   /bodies:
     get:
       summary: 'Get a list of bodies'
       operationId: controllers.bodies.get
+      tags:
+        - bodies
       parameters:
         - name: replay_id
           in: query
@@ -23,8 +26,6 @@ paths:
           description: 'ID of the item used in replay files.'
           schema:
             type: integer
-      tags:
-        - bodies
       responses:
         200:
           description: 'List of bodies'
@@ -34,6 +35,48 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Body'
+  /textures/body:
+    get:
+      summary: ''
+      operationId: controllers.textures.body.get
+      tags:
+        - texture
+      parameters:
+        - name: body_id
+          in: query
+          required: true
+          example: 23
+          description: 'The ID of the body used in replay files'
+          schema:
+            type: integer
+        - name: primary_color
+          in: query
+          required: false
+          description: 'The primary color of the body in 0xFFFFFF integer format. If not provided, the default blue is applied.'
+          example: 16777215
+          schema:
+            type: integer
+            maximum: 16777215
+            minimum: 0
+        - name: body_paint
+          in: query
+          required: false
+          description: 'The color of the paint applied to the body'
+          example: 16777215
+          schema:
+            type: integer
+            maximum: 16777215
+            minimum: 0
+      responses:
+        200:
+          description: 'Returns the texture in the chosen format'
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+        404:
+          description: 'If the texture was not found'
 components:
   securitySchemes:
     ApiKeyAuth:
@@ -52,7 +95,7 @@ components:
         replay_id:
           type: integer
           description: 'ID of the item used in replay files.'
-          example: 0
+          example: 23
         model:
           type: string
           description: 'URL to the GLTF model of the body'
